--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -1559,6 +1559,9 @@
             $dmp_header.click(function() {
                 $dmp_frame.slideToggle();
             });
+            if ($('body').hasClass('index-page')) {
+            	$dmp_header.trigger('click');
+            }
         });
         </script>
 
