update share links in header. closes #33

--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -953,6 +953,17 @@
                         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
                 })();
         </script>
+
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@nprapps">
+		<meta property="og:title" content="TKTKTK" />
+		<meta property="og:url" content="TKTKTK" />
+		<meta property="og:type" content="article" />
+		<meta property="og:description" content="TKTKTK" />
+		<meta property="og:image" content="TKTKTK" />
+		<meta property="og:site_name" content="NPR.org" />
+		<meta property="fb:app_id" content="138837436154588" />
+
     </head>
     <body class="{block:IndexPage}index-page{/block:IndexPage}{block:PermalinkPage}permalink-page{/block:PermalinkPage}">
         <div id="nav">
@@ -963,10 +974,10 @@
                 <li class="music"><a href="http://www.npr.org/music/">Music</a></li>
                 <li class="listen"><a href="http://www.npr.org/listen/">Listen</a></li>
             </ul>
-            <ul class="social-links">
-                <li class="twitter"><a rel="external" href="http://twitter.com/share?text=Dear%20Mr.%20President%2C%20Please%20don't%20forget%20______.%20Send%20your%20postcard.%20%23inauguration%20http%3A%2F%2Ft.co%2F2icgw7d3" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Navbar', 'Dear Mr. President']);">Share This Page On Twitter</a></li>
-                <li class="facebook"><a rel="external" href="http://www.facebook.com/sharer/sharer.php?u=http://inauguration2013.tumblr.com/" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Navbar', 'Dear Mr. President']);">Like This Page On Facebook</a></li>
-            </ul>
+			<ul class="social-links">
+				<li class="twitter"><a rel="external" href="http://twitter.com/share?text=TKTKTK&amp;url=TKTKTK" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Navbar', 'Chat']);">Share This Page On Twitter</a></li>
+				<li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link=TKTKTK&picture=TKTKTK&name=TKTKTK&redirect_uri=TKTKTK" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Navbar', 'Chat']);">Like This Page On Facebook</a></li>
+			</ul>
             <ul class="site-links-2">
                 <li class="stations"><a href="http://www.npr.org/templates/stations/stations/">Stations</a></li>
                 <li class="donate"><a href="http://www.npr.org/stations/donate/index.php">Donate</a></li>
