update fb share link for #32

--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -922,11 +922,11 @@
             {CustomCSS}
         </style>
 
-        <meta property="og:title" content="Dear Mr. President" />
-        <meta property="og:url" content="http://inauguration2013.tumblr.com/" />
+        <meta property="og:title" content="Dinner Confessional" />
+        <meta property="og:url" content="http://staging-family-meal.tumblr.com/" />
         <meta property="og:type" content="article" />
-        <meta property="og:description" content="Dear Mr. President, Please don't forget ______. Send your postcard." />
-        <meta property="og:image" content="https://pbs.twimg.com/media/BAMzZIHCIAAA3Er.jpg" />
+        <meta property="og:description" content="TKTKTK" />
+        <meta property="og:image" content="TKTKTK" />
         <meta property="og:site_name" content="NPR.org" />
         <meta property="fb:app_id" content="138837436154588" />
 
@@ -956,10 +956,10 @@
 
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@nprapps">
-		<meta property="og:title" content="TKTKTK" />
-		<meta property="og:url" content="TKTKTK" />
+		<meta property="og:title" content="{Title}" />
+		<meta property="og:url" content="http://staging-family-meal.tumblr.com" />
 		<meta property="og:type" content="article" />
-		<meta property="og:description" content="TKTKTK" />
+		<meta property="og:description" content="{Description}" />
 		<meta property="og:image" content="TKTKTK" />
 		<meta property="og:site_name" content="NPR.org" />
 		<meta property="fb:app_id" content="138837436154588" />
@@ -975,8 +975,8 @@
                 <li class="listen"><a href="http://www.npr.org/listen/">Listen</a></li>
             </ul>
 			<ul class="social-links">
-				<li class="twitter"><a rel="external" href="http://twitter.com/share?text=TKTKTK&amp;url=TKTKTK" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Navbar', 'Chat']);">Share This Page On Twitter</a></li>
-				<li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link=TKTKTK&picture=TKTKTK&name=TKTKTK&redirect_uri=TKTKTK" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Navbar', 'Chat']);">Like This Page On Facebook</a></li>
+				<li class="twitter"><a rel="external" href="http://twitter.com/share?text={Title}&amp;url=http://staging-family-meal.tumblr.com" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Navbar', 'Dinner Confessional']);">Share This Page On Twitter</a></li>
+				<li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link=http://staging-family-meal.tumblr.com&picture=TKTKTK&name={Title}&redirect_uri=http://staging-family-meal.tumblr.com" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Navbar', 'Dinner Confessional']);">Like This Page On Facebook</a></li>
 			</ul>
             <ul class="site-links-2">
                 <li class="stations"><a href="http://www.npr.org/templates/stations/stations/">Stations</a></li>
@@ -1317,8 +1317,8 @@
 
                                 <ul class="post_info social">
                                     <li class="share">Share This Postcard</li>
-                                    <li class="facebook"><a rel="external" href="http://www.facebook.com/sharer/sharer.php?t=Dear+Mr.+President%2C+Please+don%27t+forget...&amp;u={Permalink}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Post', 'Dear Mr President']);" title="Like This Page On Facebook"><span></span>Facebook</a></li>
-                                    <li class="twitter"><a rel="external" href="http://twitter.com/share?text=Dear+Mr.+President%2C+Please+don%27t+forget...+%23inauguration&amp;url={Permalink}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Post', 'Dear Mr President']);" title="Share This Page On Twitter"><span></span>Twitter</a></li>
+                                    <li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link={Permalink}&picture={PhotoURL-500}&name={Caption}&redirect_uri={Permalink}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Post', 'Dinner Confessional']);" title="Like This Page On Facebook"><span></span>Facebook</a></li>
+                                    <li class="twitter"><a rel="external" href="http://twitter.com/share?text={Caption}&amp;url={Permalink}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Post', 'Dinner Confessional']);" title="Share This Page On Twitter"><span></span>Twitter</a></li>
                                 </ul>
 
                                 </section>
