update share language. closes #38

--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -1316,9 +1316,9 @@
 
 
                                 <ul class="post_info social">
-                                    <li class="share">Share This Postcard</li>
-                                    <li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link={Permalink}&picture={PhotoURL-500}&name={Caption}&redirect_uri={Permalink}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Post', 'Dinner Confessional']);" title="Like This Page On Facebook"><span></span>Facebook</a></li>
-                                    <li class="twitter"><a rel="external" href="http://twitter.com/share?text={Caption}&amp;url={Permalink}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Post', 'Dinner Confessional']);" title="Share This Page On Twitter"><span></span>Twitter</a></li>
+                                    <li class="share">Share This</li>
+                                    <li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link={Permalink}&picture={PhotoURL-500}&name={Title}&redirect_uri={Permalink}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Post', 'Dinner Confessional']);" title="Like This Page On Facebook"><span></span>Facebook</a></li>
+                                    <li class="twitter"><a rel="external" href="http://twitter.com/share?text={Title}&amp;url={Permalink}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Post', 'Dinner Confessional']);" title="Share This Page On Twitter"><span></span>Twitter</a></li>
                                 </ul>
 
                                 </section>
