--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -1370,7 +1370,7 @@
             <footer id="footer">
                 {block:PermalinkPage}
                     <nav class="pagination-index">
-                        <a href="/">See More Notes To The President&nbsp;&rsaquo;</a>
+                        <a href="/">See More Dinnertime Confessions&nbsp;&rsaquo;</a>
                     </nav>
                 {/block:PermalinkPage}
                 {block:IfShowCopyrightInFooter}
