--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -87,6 +87,10 @@
             	font-size: 11px;
             	font-style: italic;
             }
+            #blog_info .more { 
+            	font-size: 12px; 
+            	font-weight: bold;
+            }
 
             #dmp-form {
                 color: #fff;
@@ -922,8 +926,8 @@
             {CustomCSS}
         </style>
 
-        <meta property="og:title" content="Dinner Confessional" />
-        <meta property="og:url" content="http://staging-family-meal.tumblr.com/" />
+        <meta property="og:title" content="Dinnertime Confessional" />
+        <meta property="og:url" content="http://dinnertimeconfessional.tumblr.com/" />
         <meta property="og:type" content="article" />
         <meta property="og:description" content="TKTKTK" />
         <meta property="og:image" content="TKTKTK" />
@@ -975,8 +979,8 @@
                 <li class="listen"><a href="http://www.npr.org/listen/">Listen</a></li>
             </ul>
 			<ul class="social-links">
-				<li class="twitter"><a rel="external" href="http://twitter.com/share?text={Title}&amp;url=http://staging-family-meal.tumblr.com" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Navbar', 'Dinner Confessional']);">Share This Page On Twitter</a></li>
-				<li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link=http://staging-family-meal.tumblr.com&picture=TKTKTK&name={Title}&redirect_uri=http://staging-family-meal.tumblr.com" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Navbar', 'Dinner Confessional']);">Like This Page On Facebook</a></li>
+				<li class="twitter"><a rel="external" href="http://twitter.com/share?text={Title}&amp;url=http://staging-family-meal.tumblr.com" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Navbar', 'Dinnertime Confessional']);">Share This Page On Twitter</a></li>
+				<li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link=http://staging-family-meal.tumblr.com&picture=TKTKTK&name={Title}&redirect_uri=http://staging-family-meal.tumblr.com" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Navbar', 'Dinnertime Confessional']);">Like This Page On Facebook</a></li>
 			</ul>
             <ul class="site-links-2">
                 <li class="stations"><a href="http://www.npr.org/templates/stations/stations/">Stations</a></li>
@@ -990,7 +994,7 @@
             <header id="header">
                 <section id="blog_info">
                     {block:IfShowBlogTitle}<h1><a href="/">{Title}</a></h1>{/block:IfShowBlogTitle}
-                    {block:IfShowBlogDescription}{block:Description}<div class="cont description group">{Description}</div>{/block:Description}{/block:IfShowBlogDescription}
+                    {block:IfShowBlogDescription}{block:Description}<div class="cont description group">{Description}<br /><span class="more">Full Series: <a href="http://www.npr.org/templates/archives/archive.php?thingId=172724251">Crunch Time During the American Work and School Week &rsaquo;</a></span></div>{/block:Description}{/block:IfShowBlogDescription}
                     {block:IndexPage}<p class="project-credits">Credits: Brian Boyer, Jeremy Bowers, Ben de la Cruz, Maria Godoy, Alyson Hurt, Kate Myers, Katie Zhu / NPR</p>{/block:IndexPage}
                 </section>
 
@@ -1018,7 +1022,7 @@
             <section id="dmp-form">
                 <div class="wrap">
                     <div class="hdr">
-                        <h3><span></span>SHARE: What Do You Want The President To Remember?</h3>
+                        <h3><span></span>SHARE: What's for dinner?</h3>
                     </div>
                     <div class="dmp-iframe-wrapper">
                         <iframe class="dmp-iframe" src="http://apps.npr.org/familymeal/tumblr-form.html" frameborder="0" marginheight="0" marginwidth="0" scrolling="no"></iframe>
@@ -1317,8 +1321,8 @@
 
                                 <ul class="post_info social">
                                     <li class="share">Share This</li>
-                                    <li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link={Permalink}&picture={PhotoURL-500}&name={Title}&redirect_uri={Permalink}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Post', 'Dinner Confessional']);" title="Like This Page On Facebook"><span></span>Facebook</a></li>
-                                    <li class="twitter"><a rel="external" href="http://twitter.com/share?text={Title}&amp;url={Permalink}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Post', 'Dinner Confessional']);" title="Share This Page On Twitter"><span></span>Twitter</a></li>
+                                    <li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link={Permalink}&picture={PhotoURL-500}&name={Title}&redirect_uri={Permalink}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Post', 'Dinnertime Confessional']);" title="Like This Page On Facebook"><span></span>Facebook</a></li>
+                                    <li class="twitter"><a rel="external" href="http://twitter.com/share?text={Title}&amp;url={Permalink}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Post', 'Dinnertime Confessional']);" title="Share This Page On Twitter"><span></span>Twitter</a></li>
                                 </ul>
 
                                 </section>
