tumblr style tweaks to SHARE header

--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -135,7 +135,7 @@
                 float: left;
             }
             #dmp-form .dmp-iframe {
-                height: 790px;
+                height: 630px;
                 width: 100%;
             }
 
@@ -148,10 +148,10 @@
 
             #dmp-form .legal {
                 margin: 0 auto;
+                padding: 0 20px;
                 font-size: 11px;
                 font-style: italic;
-                width: 70%;
-                max-width: 940px;
+                max-width: 560px;
             }
 
             img { max-width: 100% }
@@ -910,7 +910,7 @@
                 #dmp-form .hdr { height: 64px; }
                 #dmp-form .hdr h3 { font-size: 13px; line-height: 19px; padding-top: 13px; }
                 #dmp-form .hdr h3 span { width: 64px; height: 64px; margin-right: 15px; background-position: 50% 50%; margin-top: -13px; background-image: url('http://apps.npr.org/inauguration/img/btn-share-small.png') }
-                #dmp-form .dmp-iframe { height: 725px; }
+				#dmp-form .dmp-iframe { height: 650px; }
                 #footer { padding-left: 10px; margin-left: 0; margin-right: 0; }
             }
         </style>
