tweak fb share code on tumblr template

--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -929,7 +929,7 @@
         <meta property="og:title" content="Dinnertime Confessional" />
         <meta property="og:url" content="http://dinnertimeconfessional.tumblr.com/" />
         <meta property="og:type" content="article" />
-        <meta property="og:description" content="TKTKTK" />
+        <meta property="og:description" content="Dinner is hard. We want to know what's on your family's table, and why. Share yours at NPR's Dinnertime Confessional." />
         <meta property="og:image" content="TKTKTK" />
         <meta property="og:site_name" content="NPR.org" />
         <meta property="fb:app_id" content="138837436154588" />
