removed my name from the credits

--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -81,8 +81,8 @@
             #blog_info h1 a { color: #555; }
             #blog_info .description { color: #787878; }
             #blog_info p.project-credits {
-            	color: #999;
-            	margin-top: 15px;
+                color: #999;
+                margin-top: 15px;
             	margin-bottom: 0;
             	font-size: 11px;
             	font-style: italic;
@@ -995,7 +995,7 @@
                 <section id="blog_info">
                     {block:IfShowBlogTitle}<h1><a href="/">{Title}</a></h1>{/block:IfShowBlogTitle}
                     {block:IfShowBlogDescription}{block:Description}<div class="cont description group">{Description}<br /><span class="more">Full Series: <a href="http://www.npr.org/templates/archives/archive.php?thingId=172724251">Crunch Time During the American Work and School Week &rsaquo;</a></span></div>{/block:Description}{/block:IfShowBlogDescription}
-                    {block:IndexPage}<p class="project-credits">Credits: Brian Boyer, Jeremy Bowers, Ben de la Cruz, Maria Godoy, Alyson Hurt, Kate Myers, Katie Zhu / NPR</p>{/block:IndexPage}
+                    {block:IndexPage}<p class="project-credits">Credits: Jeremy Bowers, Ben de la Cruz, Maria Godoy, Alyson Hurt, Kate Myers, Katie Zhu / NPR</p>{/block:IndexPage}
                 </section>
 
                 <aside id="sidebar">
