--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -950,15 +950,15 @@
                 })();
         </script>
 
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="@nprapps">
-		<meta property="og:title" content="{Title}" />
-		<meta property="og:url" content="http://dinnertimeconfessional.tumblr.com/" />
-		<meta property="og:type" content="article" />
-		<meta property="og:description" content="Dinner is hard. We want to know what's on your family's table, and why. Share yours at NPR's Dinnertime Confessional." />
-		<meta property="og:image" content="http://apps.npr.org/familymeal/img/family-meal.png" />
-		<meta property="og:site_name" content="NPR.org" />
-		<meta property="fb:app_id" content="138837436154588" />
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@nprapps">
+        <meta property="og:title" content="{Title}" />
+        <meta property="og:url" content="http://dinnertimeconfessional.tumblr.com/" />
+        <meta property="og:type" content="article" />
+        <meta property="og:description" content="Dinner is hard. We want to know what's on your family's table, and why. Share yours at NPR's Dinnertime Confessional." />
+        <meta property="og:image" content="http://apps.npr.org/familymeal/img/family-meal.png" />
+        <meta property="og:site_name" content="NPR.org" />
+        <meta property="fb:app_id" content="138837436154588" />
 
     </head>
     <body class="{block:IndexPage}index-page{/block:IndexPage}{block:PermalinkPage}permalink-page{/block:PermalinkPage}">
@@ -971,8 +971,8 @@
                 <li class="listen"><a href="http://www.npr.org/listen/">Listen</a></li>
             </ul>
 			<ul class="social-links">
-				<li class="twitter"><a rel="external" href="http://twitter.com/share?text={Title}&amp;url=http://dinnertimeconfessional.tumblr.com/" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Navbar', 'Dinnertime Confessional']);">Share This Page On Twitter</a></li>
-				<li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link=http://dinnertimeconfessional.tumblr.com/&picture=http://apps.npr.org/familymeal/img/family-meal.png&name={Title}&redirect_uri=http://dinnertimeconfessional.tumblr.com/" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Navbar', 'Dinnertime Confessional']);">Like This Page On Facebook</a></li>
+				<li class="twitter"><a rel="external" href="http://twitter.com/share?text=Dinner%20is%20hard.%20We%20want%20to%20know%20what's%20on%20your%20family's%20table%2C%20and%20why.%20Share%20yours%20at%20NPR's%20Dinnertime%20Confessional.&amp;url=http%3A%2F%2Fdinnertimeconfessional.tumblr.com%2F" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Navbar', 'Dinnertime Confessional']);">Share This Page On Twitter</a></li>
+				<li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link=http%3A%2F%2Fdinnertimeconfessional.tumblr.com%2F&picture=http%3A%2F%2Fapps.npr.org%2Ffamilymeal%2Fimg%2Ffamily-meal.png&name={Title}&redirect_uri=http%3A%2F%2Fdinnertimeconfessional.tumblr.com%2F" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Navbar', 'Dinnertime Confessional']);">Like This Page On Facebook</a></li>
 			</ul>
             <ul class="site-links-2">
                 <li class="stations"><a href="http://www.npr.org/templates/stations/stations/">Stations</a></li>
