tweaks to social, closes #51

--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -83,7 +83,7 @@
             #blog_info p.project-credits {
                 color: #999;
                 margin-top: 15px;
-            	margin-bottom: 0;
+                margin-bottom: 0;
             	font-size: 11px;
             	font-style: italic;
             }
@@ -1307,7 +1307,7 @@
                                 <ul class="post_info social">
                                     <li class="share">Share This</li>
                                     <li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id=138837436154588&amp;link={Permalink}&picture={PhotoURL-500}&name={Title}&redirect_uri={Permalink}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Facebook In Post', 'Dinnertime Confessional']);" title="Like This Page On Facebook"><span></span>Facebook</a></li>
-                                    <li class="twitter"><a rel="external" href="http://twitter.com/share?text={Title}&amp;url={Permalink}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Post', 'Dinnertime Confessional']);" title="Share This Page On Twitter"><span></span>Twitter</a></li>
+                                    <li class="twitter"><a rel="external" href="http://twitter.com/share?text=Dinner+is+hard.&amp;url={Permalink}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', 'Social', 'Click Twitter In Post', 'Dinnertime Confessional']);" title="Share This Page On Twitter"><span></span>Twitter</a></li>
                                 </ul>
 
                                 </section>
