--- a/tumblr/tmpl-tumblr.html
+++ b/tumblr/tmpl-tumblr.html
@@ -33,6 +33,9 @@
 
         <!-- Theme CSS -->
         <style type="text/css" media="screen">
+        	html {
+        		-webkit-text-size-adjust: none; /* prevent font scaling in landscape */
+        	}
             body {
                 -webkit-font-smoothing: antialiased;
                 font: 15px/1.5 Arial, Helvetica, sans-serif;
@@ -904,7 +907,7 @@
                 #dmp-form .hdr { height: 64px; }
                 #dmp-form .hdr h3 { font-size: 15px; line-height: 40px; padding-top: 13px; }
                 #dmp-form .hdr h3 span { width: 64px; height: 64px; margin-right: 15px; background-position: 50% 50%; margin-top: -13px; background-image: url('http://apps.npr.org/familymeal/img/btn-share-small.png') }
-				#dmp-form .dmp-iframe { height: 790px; }
+				#dmp-form .dmp-iframe { height: 770px; }
                 #footer { padding-left: 10px; margin-left: 0; margin-right: 0; }
             }
         </style>
